name:                vim-hs-plugins
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/vim-hs-plugins#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vim-hs-plugins
  hs-source-dirs:      src
                     , src/Fibonacci
                     , src/Random
                     , src/Test
  other-modules:       Fibonacci
                     , Fibonacci.Plugin
                     , Random
                     , Random.Plugin
                     , Test
                     , Test.Plugin
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , nvim-hs
                     , random
                     , dates
                     , time
                     , parsec
